--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://www.humanesociety.org/sites/default/files/2022-08/hl-yp-cats-579652.jpg"/>
+    <img 
+      src="https://static.wikia.nocookie.net/animals-are-cool/images/d/d1/Felis-pardalis1140620097.jpg/revision/latest?cb=20180319163827" 
+      alt="Ocelot"
+    />
+    <img 
+      src="https://journals.plos.org/plosone/article/figure/image?size=medium&id=10.1371/journal.pone.0247092.g004" 
+      alt="Multiple Cats"
+      title="Cat Breed Identifier"
+    /> 
   </body>
 </html>
